Accueil : Big image text align center; correction de conflit git

--- a/app/assets/stylesheets/acceuil.scss
+++ b/app/assets/stylesheets/acceuil.scss
@@ -15,7 +15,7 @@
     /*background: url(image_path("acceuil/bigimage.jpg"));*/
     background-size: cover;
     background-position: center center;
-    
+    text-align: center;   
     .title{
     padding-top: 120px;
     padding-left: 150px;
